Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gstreamer gstreamer
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 672
    • Issues 672
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 354
    • Merge requests 354
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gstreamergstreamer
  • Issues
  • #425

Closed
Open
Created Aug 13, 2019 by Askar Safin@safinaskar

[SEEMS PATCH AVAILABLE] Code from basic tutorial 13 ("Playback speed") freezes after several playback direction changes

Steps to reproduce:

  • Download https://www.freedesktop.org/software/gstreamer-sdk/data/media/sintel_trailer-480p.webm
  • Open https://gstreamer.freedesktop.org/documentation/tutorials/basic/playback-speed.html in your browser, then copy-paste provided basic-tutorial-13.c using your mouse
  • Replace https:// URL with file:// URL (location of downloaded media)
  • Compile and run the program
  • Wait 2 seconds, press "d" and Enter
  • Wait 1 second, press "d" and Enter

What I expected to see: The movie should continue playing till the end

What I see: The movie plays some time and then freezes

Debug log: https://zerobin.net/?855fee07ffa2ff7d#CCGCi5eBfN+gIsaIr/6Ku9Gp3bztIo10w2KIkplVH98=

I use fresh Debian sid amd64 in virtual machine. "gst-launch --version" reports 1.16.0

Edited Aug 13, 2019 by Askar Safin
Assignee
Assign to
Time tracking