tutorials: fix playback-speed example

Fixes https://gitlab.freedesktop.org/gstreamer/gstreamer/issues/425
Also avoids duplication