examples/tutorials/basic-tutorial-13.c
@@ -30,7 +30,7 @@ send_seek_event (CustomData * data)
     seek_event =
         gst_event_new_seek (data->rate, GST_FORMAT_TIME,
         GST_SEEK_FLAG_FLUSH | GST_SEEK_FLAG_ACCURATE, GST_SEEK_TYPE_SET,
-        position, GST_SEEK_TYPE_SET, -1);
+        position, GST_SEEK_TYPE_END, 0);
   } else {
     seek_event =
         gst_event_new_seek (data->rate, GST_FORMAT_TIME,
